# Expense-tracker

./: README.md  SPEC.md  TESTING.md
.claude/: settings.local.json
backend/: .gitignore  alembic.ini  pyproject.toml  seed_categories.py
backend/alembic/: env.py
backend/alembic/versions/: 20240224_000001_initial_migration.py  46daf2d435d2_remove_enum_use_varchar.py  4f29af266aab_revert_enum_to_lowercase.py  5dc207795acf_fix_transaction_type_enum.py
backend/app/: database.py  main.py
backend/app/api/v1/: analytics.py  categories.py  transactions.py
backend/app/models/: category.py  transaction.py
backend/app/schemas/: __init__.py  category.py  transaction.py
backend/app/services/: __init__.py  analytics_service.py  category_service.py  transaction_service.py
backend/tests/: conftest.py  test_api_analytics.py  test_api_categories.py  test_api_transactions.py  test_category_service.py  test_transaction_service.py
frontend/: .gitignore  package.json  pnpm-lock.yaml  ui-skill.md  vitest.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/analytics/: page.tsx
frontend/app/budget/: page.tsx
frontend/app/transactions/: page.tsx
frontend/components/: AnalyticsContent.tsx  CategorySelect.tsx  DashboardContent.tsx  ExpenseChart.tsx  Footer.tsx  Header.tsx  MonthlyTrend.tsx  StatsCard.tsx  TransactionEditModal.tsx  TransactionForm.tsx  TransactionList.tsx  TransactionsContent.tsx
frontend/lib/: api.ts  types.ts  utils.ts
frontend/tests/: CategorySelect.test.tsx  StatsCard.test.tsx  TransactionForm.test.tsx
(+40 files in other folders)
